test/libhyperion/syntaxTests/functionTypes/external_library_function_to_external_function_type.hyp
library L {
    function f(uint256 _a) external returns (uint256) {}
}

contract C {
    function run(function(uint256) external returns (uint256) _operation) internal returns (uint256) {}
    function test() public {
        run(L.f);
        function(uint256) external returns (uint256) _operation = L.f;
    }
}
// ----
// TypeError 4888: (102-157): External function types are not supported with this address size: address (512 bits) plus selector (32 bits) exceeds the VM word size (512 bits).
